Attempted to correct flex alignment

--- a/css/styles.css
+++ b/css/styles.css
@@ -134,6 +134,7 @@ nav h1 a {
 
 /* ====================== Restaurant Listing ====================== */
 #restaurants-list {
+  display: flex; 
   background-color: #f3f3f3;
   list-style: outside none none;
   margin: 0;
